--- a/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
+++ b/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
@@ -863,16 +863,17 @@ ul {
     border: var(--border-width) solid;
     border-color: var(--neutral);
     border-radius: 4px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    margin-right: 10px;
     margin-top: 10px;
-    padding: 6px 12px;
+    padding: 10px;
     
     overflow: visible;
 }
 
 .construct-output legend {
     display: inline-block;
-    font-size: 1.25rem !important;
+    font-size: 20px !important;
     padding-bottom: 2px;
     padding-left: 10px;
     padding-right: 10px;
